@@ -5,8 +5,10 @@ Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/t
 
 
 === Version 0.9 ===
+2011-xx-xx
 
 * Fixed compatibility with MediaWiki 1.18.
+* Use of FormatJson::encode instead of josn_encode for compatibility with PHP5 < 5.2.
 
 === Version 0.8 ===
 2011-02-27
